# mingolf-cli

./: .gitignore  README.md  pyproject.toml
.agent/: SKILL.md  skill.json
.agent/examples/: advanced.md  basic.md
.github/workflows/: package-skill.yml
docs/: api.md
mingolf_cli/: __init__.py  __main__.py  cli_common.py  config.py  errors.py  exit_codes.py  main.py  models.py  output.py  runtime.py
mingolf_cli/client/: __init__.py  auth.py  booking.py  http.py
mingolf_cli/commands/: auth.py  booking.py  profile.py
scripts/: generate-skill-manifest.py  package-skill.py
tests/: test_booking_helpers.py  test_config_env.py  test_fixtures.py  test_http_client.py  test_output_contract.py
tests/fixtures/: login_error_sv.json  validate_errors.json
