[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mingolf-cli"
version = "0.1.0"
description = "AI-agent-first CLI for mingolf.golf.se"
readme = {text = "Mingolf command-line client.", content-type = "text/plain"}
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "keyring>=25.2.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
mingolf = "mingolf_cli.main:run"

[tool.setuptools]
packages = ["mingolf_cli", "mingolf_cli.client", "mingolf_cli.commands"]

[tool.pytest.ini_options]
testpaths = ["tests"]
